# Indy7-rnb_control-bulletSim

./: .gitignore  .project  DeveloperNote.md  Doxyfile  README.md
control_hub/: algebra.h  control_algorithm_default.cpp  control_algorithm_default.h  control_hub.cpp  control_hub.h  controller_interface.h  controller_ui.cpp  controller_ui.h  data_config.h  data_logger.h  html_contents.h  trajectory_interface.cpp  trajectory_interface.h  utils_rnb.h
controllers/Hybrid_Etank/: .cproject  .project  Hybrid_Etank.cpp  Hybrid_Etank.h
controllers/Hybrid_Null/: .project  CMakeLists.txt  Hybrid_Null.cpp  Hybrid_Null.h
controllers/NRIC_Force/: .project  CMakeLists.txt  NRIC_Force.cpp  NRIC_Force.h  NRIC_Force.vcxproj  NRIC_Force.vcxproj.filters
controllers/NRIC_PD/: .cproject  .project  CMakeLists.txt  NRIC_PD.cpp  NRIC_PD.h  NRIC_PD.vcxproj  NRIC_PD.vcxproj.filters
controllers/NRIC_PD64/: .cproject  .project
controllers/PD/: .cproject  .project  CMakeLists.txt  PD.cpp  PD.h  PD.vcxproj  PD.vcxproj.filters
controllers/PD64/: .cproject  .project
controllers/TaskPriority/: .project  CMakeLists.txt  TaskPriority.cpp  TaskPriority.h
controllers/VS14/: .gitignore  VS14.sln
controllers/tester/: .gitignore  CMakeLists.txt  ReadMe.md  TEST_CONTROLLER  test_controller.cpp  test_controller.h  traj_gen.h
projects/BulletSimControl/: .gitignore  BulletSimControl.sln  README.md
projects/BulletSimControl/BulletSimControl/: BulletSimControl.vcxproj  BulletSimControl.vcxproj.filters  CMakeLists.txt  bullet_sim_main.cpp  control_hub  resource.h
projects/BulletSimControl/BulletSimControl/control_hub_plugin/: ControlHubPlugin.cpp  ControlHubPlugin.h
projects/BulletSimControl/BulletSimControl/custom_physics_server/: custom_command_processor.cpp  custom_command_processor.h  custom_physics_server.cpp  custom_physics_server.h
projects/BulletSimControl/scripts/: [Tutorial] BulletSimControl-Marker.ipynb  [Tutorial] BulletSimControl-Multi.ipynb  [Tutorial] BulletSimControl-TaskSpace.ipynb  [Tutorial] BulletSimControl.ipynb  bullet_cv.py  bullet_sim_client.py
projects/IndyControlRNB/: .cproject  .gitignore  .project  README.md  encrypt.h  indyutils.cpp  indyutils.h
projects/IndyControlRNB/JointControl/: JointControl.cpp  JointControl.h
projects/IndyControlRNB/TaskControl/: TaskControl.cpp  TaskControl.h
projects/IndyControlRNB/gain_example/: NRIC_PD-JointControl
projects/IndyControlRNB/indy_sdk_license_files/: sdk_license.lic-45  sdk_license.lic-63
projects/IndyControlRNB64/: .cproject  .project
projects/PandaControlRNB/: .gitignore  README.md
projects/PandaControlRNB/gain-example/: NRIC_PD-JointControl  PD-JointControl
projects/PandaControlRNB/src/panda_control/: CMakeLists.txt  README.md  control_hub  package.xml  panda_control_plugin.xml
projects/PandaControlRNB/src/panda_control/cfg/: compliance_param.cfg  desired_mass_param.cfg  dual_arm_compliance_param.cfg
projects/PandaControlRNB/src/panda_control/config/: panda_control.yaml
projects/PandaControlRNB/src/panda_control/include/: franka_model_interface_custom.h
projects/PandaControlRNB/src/panda_control/include/panda_control/: joint_control_rnb.h
projects/PandaControlRNB/src/panda_control/launch/: joint_control_rnb.launch  move_to_start.launch
projects/PandaControlRNB/src/panda_control/src/: joint_control_rnb.cpp
scripts/: TRAJ_GEN_README.md  WebClient Example.ipynb  convert_urdf.ipynb  plot_data.ipynb  testing_se3_interpolation.ipynb  trajectory_client_example.ipynb  trajectory_client_example_Indy.ipynb  trajectory_client_example_panda.ipynb  trajectory_client_example_tracker.ipynb
scripts/utils/: algebra.py  direct_vive.py  global_config.py  joint_utils.py  rotation_utils.py  shared_vive.py  traj_utils.py  utils.py  web_client.py
scripts/utils/trajectory_client/: panda_trajectory_client.py  trajectory_client.py
urdf/indy7/: indy7.urdf
urdf/panda/: panda_bullet.urdf  panda_fix2.urdf
